--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,9 +7,18 @@ h3{
     font-family: 'Lobster', cursive;
 }
 
-img{
+#logoImg{
     width:30px;
     height:30px;
+}
+
+ul{
+    list-style-type: none;
+}
+
+li{
+    text-decoration: none;
+    padding-left: 16px;
 }
 
 @media only screen and (max-width: 400px){
