--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* * {
+  background-color: #fafafa;
+} */
+
 .App {
   text-align: center;
 }
@@ -27,6 +31,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
