--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -2,3 +2,36 @@
     max-width: 1000px;
     margin: 0 auto;
 }
+
+.bio {
+    padding-left: 5rem;
+
+}
+
+.parent_overlay {
+    position: relative;
+
+}
+
+.child_overlay {
+    position: absolute;
+    display: none;
+    background: black;
+    opacity: .5;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 130px;
+}
+
+.child_content {
+    position: absolute;
+}
+
+.parent_overlay:hover .child_overlay {
+    display: block;
+    /* text-align: center; */
+    color: white;
+    margin: 0 auto;
+
+}
